--- a/src/main/resources/templates/admin/thongKe.html
+++ b/src/main/resources/templates/admin/thongKe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -30,73 +30,32 @@
             <a href="/admin">Menu</a>
         </div>
 
-        <ul class="nav nav-tabs mt-4">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#tab1">Thống kê theo tháng</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tab2">Thống kê theo năm</a>
-            </li>
-        </ul>
-
-        <div class="tab-content mt-2">
-            <div class="tab-pane fade show active" id="tab1">
-                <table class="table mt-4">
-                    <thead>
-                        <tr>
-                            <th scope="col">STT</th>
-                            <th scope="col">Order ID</th>
-                            <th scope="col">Product Name</th>
-                            <th scope="col">Order Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>ORD001</td>
-                            <td>Product 1</td>
-                            <td>2022-01-15</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>ORD002</td>
-                            <td>Product 2</td>
-                            <td>2022-01-20</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="tab-pane fade" id="tab2">
-                <table class="table mt-4">
-                    <thead>
-                        <tr>
-                            <th scope="col">STT</th>
-                            <th scope="col">Order ID</th>
-                            <th scope="col">Product Name</th>
-                            <th scope="col">Order Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>ORD001</td>
-                            <td>Product 1</td>
-                            <td>2022-01-15</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>ORD002</td>
-                            <td>Product 2</td>
-                            <td>2022-01-20</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <h1>Thống kê</h1>
+    <form action="/admin/thongke" method="post">
+	    <input type="number" name="month" >
+	    <button type="submit">Submit</button>
+	</form>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Ngày đặt hàng</th>
+                <th>Tổng số tiền</th>
+                <th>Tên người mua</th>
+                <th>Tên sản phẩm</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Iterate over the list of reports -->
+            <tr th:each="item : ${items}">
+                <td th:text="${item.totalAmount}"></td>
+            
+                <td th:text="${item.productName}"></td>
+            </tr>
+        </tbody>
+    </table>
     </div>
 
-    </div>
-    </div>
     <footer><div class="logo">
         <h1></h1>
     </div></footer>
