--- a/src/main/resources/templates/admin/quanLyDonHang.html
+++ b/src/main/resources/templates/admin/quanLyDonHang.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -29,48 +29,76 @@
             <h3>Quản lý đơn hàng</h3>
             <a href="/admin">Menu</a>
         </div>
+ 		<form th:action="@{/admin/quanLyDonHang}" method="post">
+            <input name="keywords" th:value="${keywords}">
+            <button>Search</button>
+        </form>
 
-        <ul class="nav nav-tabs mt-4">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#tab1">Bảng dữ liệu</a>
-            </li>
-        </ul>
-
-        <div class="tab-content mt-2">
-            <div class="tab-pane fade show active" id="tab1">
+                <div id="orderTable">
                 <table class="table mt-4">
                     <thead>
                         <tr>
                             <th scope="col">ID</th>
-                            <th scope="col">User ID</th>
+                            <th scope="col">User</th>
+                            <th scope="col">Product Name</th>
                             <th scope="col">Order Date</th>
+                            <th scope="col">Quantity</th>
                             <th scope="col">Total Amount</th>
-                            <th scope="col">Status</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>User1</td>
-                            <td>2023-05-21</td>
-                            <td>$100.00</td>
-                            <td>Processing</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>User2</td>
-                            <td>2023-05-22</td>
-                            <td>$150.00</td>
-                            <td>Shipped</td>
+                        <tr  th:each="order : ${orders}">
+                            <th th:text="${order.id}"></th>
+                            <td th:text="${order.order.user.fullname}"></td>
+                            <td th:text="${order.product.name}"></td>
+                            <td th:text="${order.order.orderDate}"></td>
+                            <td th:text="${order.quantity}"></td>
+                            <td th:text="${#numbers.formatDecimal(order.order.totalAmount, 0, 'COMMA', 0, 'POINT')}"></td>
                         </tr>
                     </tbody>
                 </table>
+                <nav aria-label="Page navigation">
+				    <ul class="pagination">
+				        <li class="page-item">
+				            <a class="page-link" href="javascript:void(0)" th:onclick="'loadPage(0)'">First</a>
+				        </li>
+				        <li class="page-item">
+				            <a class="page-link" href="javascript:void(0)" th:onclick="'loadPage(' + ${orders.number - 1} + ')'" th:if="${orders.number > 0}">Previous</a>
+				        </li>
+				        <li class="page-item">
+				            <a class="page-link" href="javascript:void(0)" th:onclick="'loadPage(' + ${orders.number + 1} + ')'" th:if="${orders.number < orders.totalPages - 1}">Next</a>
+				        </li>
+				        <li class="page-item">
+				            <a class="page-link" href="javascript:void(0)" th:onclick="'loadPage(' + ${orders.totalPages - 1} + ')'" th:if="${orders.number < orders.totalPages - 1}">Last</a>
+				        </li>
+				    </ul>
+				</nav>
             </div>
     </div>
-    </div>
+
     <footer><div class="logo">
         <h1></h1>
     </div></footer>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+       function loadPage(page) {
+		    $.ajax({
+		        url: '/admin/quanLyDonHang',
+		        type: 'GET',
+		        data: {
+		            'keywords': '',
+		            'p': page
+		        },
+		        success: function (data) {
+		            $('#orderTable').html($(data).find('#orderTable').html());
+		        },
+		        error: function () {
+		            console.log('Error occurred while loading the page.');
+		        }
+		    });
+		}
+        /*]]>*/
+    </script>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
